# django-act-as-auth

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  settings.py  setup.py  tox.ini  tox2travis.py
djactasauth/: backends.py  forms.py  util.py  views.py
docs/: Makefile  authors.rst  conf.py  contributing.rst  extension-points.rst  index.rst  quickstart.rst  release-notes.rst  supported-versions.rst
tests/: setup.py
tests/testapp/: sixmock.py  tests.py  urls.py  views.py
tests/testapp/templates/registration/: login.html
